Add correct homepage address

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pedrobergamo.github.io/web-janne-avara/",
+  "homepage": "https://www.janneavara.com",
   "name": "web-janne-avara",
   "version": "0.1.0",
   "private": true,
